# 6DoF-FMU

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
include/: AtmosphericModels.h  EarthCenteredFrames.h  GravitationalModels.h  J2000.h
src/: CMakeLists.txt
src/3DoFFixedMassRotatingEllipsoidEarth/: 3DoFFixedMassRotatingEllipsoidEarth.cpp  DynamicModel.h
src/6DoF/: 6DoF.cpp  DynamicModel.h
src/6DoF/resources/: model.tex
src/AtmosphereUS1976/: AtmosphereUS1976.cpp
src/ECEF2ECI/: ECEF2ECI.cpp
src/GravityJ2/: GravityJ2.cpp
test/: testAtmosphereUS1976FMU.cpp  testGravitationalModels.cpp  testJ2000Timing.cpp
